infra/nexus/nexus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - "<replace with your host>"
    secretName: nexus-tls-cert
  rules:
  - host: "<replace with your host>"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: olmi-nexus-repository-manager
            port:
              number: 8081
